--- a/site/public/index.html
+++ b/site/public/index.html
@@ -20,14 +20,14 @@
   <link rel="shortcut icon" href="/img/favicon.png">
 
   
-  <link href="/index.xml" rel="alternate" type="application/rss+xml" title="Tasty Licks" />
+  <link href="/index.xml" rel="alternate" type="application/rss+xml" title="Drogheda Eats" />
 </head>
 <body class="">
 
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="/"><h1>Tasty Licks</h1></a>
+      <a href="/"><h1>Drogheda Eats</h1></a>
       <p class="lead">An example website for restaurants built by <a href="https://github.com/eliwilliamson">@eliwilliamson</a> using <a href="https://github.com/netlify/victor-hugo">Victor Hugo</a>.</p>
     </div>
 
